<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_apiary_harvesting_months"
        android:id="@+id/textView7"
        android:paddingBottom="10dp"
        android:layout_marginBottom="10dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_january"
                android:id="@+id/checkBox" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_april"
                android:id="@+id/checkBox2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_july"
                android:id="@+id/checkBox3"
                android:layout_column="2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_octomber"
                android:id="@+id/checkBox7"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_february"
                android:id="@+id/checkBox8"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_may"
                android:id="@+id/checkBox9"
                android:layout_column="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_august"
                android:id="@+id/checkBox10"
                android:layout_column="2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_november"
                android:id="@+id/checkBox11"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_march"
                android:id="@+id/checkBox12"
                android:layout_column="0" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_june"
                android:id="@+id/checkBox13"
                android:layout_column="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_september"
                android:id="@+id/checkBox14"
                android:layout_column="2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_apiary_month_december"
                android:id="@+id/checkBox15"
                android:layout_column="3" />
        </TableRow>

    </TableLayout>

</LinearLayout>