<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Spinner
        android:id="@+id/pestsBeetle"
        android:layout_height="wrap_content"
        android:prompt="@string/pestsBeetle"
        android:layout_width="fill_parent"
        android:entries="@array/lmh"
        android:spinnerMode="dialog">
    </Spinner>
    <Spinner
        android:id="@+id/pestsMites"
        android:layout_height="wrap_content"
        android:prompt="@string/pestsMites"
        android:layout_width="fill_parent"
        android:entries="@array/lmh"
        android:spinnerMode="dialog">
    </Spinner>
    <Spinner
        android:id="@+id/ants"
        android:layout_height="wrap_content"
        android:prompt="@string/ants"
        android:layout_width="fill_parent"
        android:entries="@array/y_n"
        android:spinnerMode="dialog">
    </Spinner>
    <Spinner
        android:id="@+id/chBrood"
        android:layout_height="wrap_content"
        android:prompt="@string/chBrood"
        android:layout_width="fill_parent"
        android:entries="@array/y_n"
        android:spinnerMode="dialog">
    </Spinner>

</LinearLayout>