<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_apiary_type"
        android:id="@+id/txtApiaryType"
        android:layout_marginBottom="15dp"
        android:textSize="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_apiary_natural"
        android:id="@+id/txtNatural"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_yes"
        android:id="@+id/ckbNatural" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_apiary_acs_tree"
        android:id="@+id/txtTree"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_yes"
        android:id="@+id/ckbTree" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_apiary_acs_breast"
        android:id="@+id/txtHeight"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_yes"
        android:id="@+id/ckbHeight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_apiary_acs_house"
        android:id="@+id/txtBeeeHouse"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_yes"
        android:id="@+id/ckbBeeHouse" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_apiary_acs_honey"
        android:id="@+id/txtBadger"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_yes"
        android:id="@+id/ckbBadger" />

</LinearLayout>