<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answer_inspection_comb_cond"
        android:id="@+id/textView17"
        android:layout_marginBottom="15dp"
        android:textSize="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/answer_inspection_honey_stores"
        android:id="@+id/textView15"
        android:layout_marginBottom="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="112dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_inspection_high"
            android:id="@+id/radioButton33" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_inspection_average"
            android:id="@+id/radioButton34" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_inspection_low"
            android:id="@+id/radioButton35" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question_inspection_pollen_stores"
        android:id="@+id/textView16"
        android:layout_marginBottom="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="112dp" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_inspection_high"
            android:id="@+id/radioButton36" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_inspection_average"
            android:id="@+id/radioButton37" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_inspection_low"
            android:id="@+id/radioButton38" />
    </RadioGroup>

</LinearLayout>